[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/balloon.png" type="Texture" id=1]
[ext_resource path="res://Sprites/jumper_mummy.png" type="Texture" id=2]
[ext_resource path="res://BalloonBomber.gd" type="Script" id=3]
[ext_resource path="res://Sprites/jump_mummy_teleg.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 41, 39 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 41, 39 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": false,
"name": "Hide",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Telegraph",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 17.0294

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 12.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 69, 167 )

[node name="BalloonBomber" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MummySprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 15 )
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 17.5 )
shape = SubResource( 4 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.5, 0.500002 )
scale = Vector2( 2.55, 3.65 )
process_parent = true
physics_process_parent = true

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( -1, 157 )
shape = SubResource( 5 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -1, 13 )

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
